# predicttemplate

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json  readme.md
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
scripts/: cruft.sh  push.sh
servicetemplatecanary/: cookiecutter.json
{{cookiecutter.name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  create_conda.sh  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.yml  example.ipynb  freetds.conf  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  tdd.sh
{{cookiecutter.name}}/.github/: renovate.json
{{cookiecutter.name}}/.github/workflows/: release.yml  test.yml
{{cookiecutter.name}}/grafana/etc/grafana/provisioning/dashboards/: dashboard.yml  drift.json
{{cookiecutter.name}}/grafana/etc/grafana/provisioning/datasources/: datasource.yml
{{cookiecutter.name}}/jupyterlab/: bashrc  dockerfile  environment.yml
{{cookiecutter.name}}/local/: .gitignore  config.env  deploy_config.yml  github.env  production.env  staging.env
{{cookiecutter.name}}/notebooks/: .gitignore  example.no_phi.ipynb  example.py
{{cookiecutter.name}}/notebooks/no.phi/: .gitignore
{{cookiecutter.name}}/postgres/: docker-entrypoint.sh  dockerfile
{{cookiecutter.name}}/postgres/sql/initdb.d/: 003.create.sql
{{cookiecutter.name}}/postgres/sql/patchdb.d/: 004.patch.sql  005.public.sql  006.private.sql  007.flowsheets.sql  008.drift.sql
{{cookiecutter.name}}/predict/: dockerfile
{{cookiecutter.name}}/predict/gold/: gold.pkl
{{cookiecutter.name}}/predict/local/: configuration.yaml  docker.yaml  test.yaml
{{cookiecutter.name}}/predict/model/: .gitignore  example.pkl
{{cookiecutter.name}}/predict/nomad/: backfill.nomad.hcl  flowsheets.nomad.disabled  predict.nomad.hcl
{{cookiecutter.name}}/predict/secrets/: example.env
{{cookiecutter.name}}/predict/sql/postgres/cohorts/: insert.sql
{{cookiecutter.name}}/predict/sql/postgres/greenishes/: insert.sql
{{cookiecutter.name}}/predict/sql/postgres/predictions/: insert.sql
{{cookiecutter.name}}/predict/src/{{cookiecutter.name}}/: __init__.py  model.py  service.py
{{cookiecutter.name}}/predict/test/: test_import.py  test_yaml.py
{{cookiecutter.name}}/scripts/: consul.sh  create_conda.sh  deploy.sh  get_token.sh  info.sh  nomad.sh  pre-commit.sh  publish.sh  tdd.sh  venv.sh  version.sh
