[bdist_wheel]
universal = 1

[options]
tests_require = pytest
zip_safe = false

[flake8]
max-complexity = 10
max-line-length = 79
ignore = B008,C819,C812,C813,C814,C815,D401,N806,W503

[matrix]
python_versions =
    3.9
    3.10
coverage_flags =
    cover: true
    nocover: false

[mypy]
follow_imports = normal
ignore_missing_imports = True
